--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Building APK for Android on Docker for PWA",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,11 @@
   },
   "homepage": "https://github.com/southworkscom/CloudApk#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "multer": "^1.4.1",
+    "q": "^1.5.1",
+    "unzip2": "^0.2.5",
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {}
 }
