--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/southworkscom/CloudApk#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "fstream": "^1.0.11",
     "multer": "^1.4.1",
+    "path": "^0.12.7",
     "q": "^1.5.1",
-    "unzip2": "^0.2.5",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "unzip2": "^0.2.5"
   },
   "devDependencies": {}
 }
