--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
     "@types/q": "^1.5.2",
+    "cors": "^2.8.5",
     "ts-node-dev": "^1.0.0-pre.44"
   }
 }
