--- a/package.json
+++ b/package.json
@@ -20,15 +20,12 @@
   },
   "homepage": "https://github.com/pwa-builder/CloudAPK/",
   "dependencies": {
-    "@types/archiver": "^3.0.0",
-    "@types/express": "^4.17.2",
-    "@types/tmp": "^0.1.0",
+    "@llama-pack/core": "^0.4.3",
     "archiver": "^3.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs-extra": "^7.0.1",
     "generate-password": "^1.5.0",
-    "llama-pack": "github:GoogleChromeLabs/llama-pack",
     "lodash": "^4.17.15",
     "multer": "^1.4.2",
     "path": "^0.12.7",
@@ -42,6 +39,9 @@
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
     "@types/q": "^1.5.2",
+    "@types/archiver": "^3.0.0",
+    "@types/express": "^4.17.2",
+    "@types/tmp": "^0.1.0",
     "cors": "^2.8.5",
     "ts-node-dev": "^1.0.0-pre.44"
   }
