--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpileOnly server.ts"
+    "dev": "ts-node-dev --respawn server.ts"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/pwa-builder/CloudAPK/",
   "dependencies": {
-    "@llama-pack/core": "^0.4.3",
+    "@bubblewrap/core": "^0.6.0",
     "archiver": "^3.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -32,8 +32,6 @@
     "q": "^1.5.1",
     "rimraf": "^2.7.1",
     "tmp": "^0.1.0",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.7.5",
     "unzip2": "^0.2.5"
   },
   "devDependencies": {
@@ -43,6 +41,8 @@
     "@types/express": "^4.17.2",
     "@types/tmp": "^0.1.0",
     "cors": "^2.8.5",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "ts-node-dev": "^1.0.0-pre.44",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5"
   }
 }
