--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "cloudapk",
   "version": "1.0.0",
-  "description": "Building APK for Android on Docker for PWA",
+  "description": "Web service that packages a Progressive Web App as an Android Trusted Web Activity app.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "tsc": "tsc",
-    "dev": "ts-node-dev --respawn server.ts"
+    "start": "node --inspect=5858 -r ts-node/register ./server.ts",
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -40,6 +38,7 @@
     "@types/archiver": "^3.0.0",
     "@types/express": "^4.17.2",
     "@types/tmp": "^0.1.0",
+    "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "ts-node-dev": "^1.0.0-pre.44",
     "ts-node": "^8.6.2",
