--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "cloudapk",
+  "name": "@pwabuilder/cloudapk",
   "version": "1.0.0",
-  "description": "Web service that packages a Progressive Web App as an Android Trusted Web Activity app.",
+  "description": "Web service that packages a Progressive Web App as an Android Trusted Web Activity app for publishing in the Google Play Store.",
   "main": "server.js",
   "scripts": {
     "start": "node --inspect=5858 -r ts-node/register ./server.ts",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
   },
   "homepage": "https://github.com/pwa-builder/CloudAPK/",
   "dependencies": {
-    "@bubblewrap/core": "^1.2.2",
+    "@bubblewrap/core": "^1.3.0",
     "archiver": "^3.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -29,7 +30,7 @@
     "path": "^0.12.7",
     "q": "^1.5.1",
     "rimraf": "^2.7.1",
-    "tmp": "^0.1.0",
+    "tmp": "^0.2.1",
     "unzip2": "^0.2.5"
   },
   "devDependencies": {
