--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web service that packages a Progressive Web App as an Android Trusted Web Activity app for publishing in the Google Play Store.",
   "main": "server.js",
   "scripts": {
-    "start": "node --inspect=5858 -r ts-node/register ./server.ts",
+    "start": "tsc && node --inspect=5858 -r ts-node/register ./server.ts",
     "dev": "nodemon",
     "build": "tsc"
   },
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/pwa-builder/CloudAPK/",
   "dependencies": {
-    "@bubblewrap/core": "^1.3.0",
+    "@bubblewrap/core": "^1.3.1",
     "archiver": "^3.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -31,7 +31,8 @@
     "q": "^1.5.1",
     "rimraf": "^2.7.1",
     "tmp": "^0.2.1",
-    "unzip2": "^0.2.5"
+    "unzip2": "^0.2.5",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
