--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
   "homepage": "https://github.com/pwa-builder/CloudAPK/",
   "dependencies": {
     "@bubblewrap/core": "^1.3.1",
-    "archiver": "^3.1.1",
+    "archiver": "^4.0.1",
     "body-parser": "^1.19.0",
+    "del": "^5.1.0",
     "express": "^4.17.1",
     "fs-extra": "^7.0.1",
     "generate-password": "^1.5.0",
     "lodash": "^4.17.15",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.0",
     "path": "^0.12.7",
     "q": "^1.5.1",
     "rimraf": "^2.7.1",
     "tmp": "^0.2.1",
-    "unzip2": "^0.2.5",
-    "node-fetch": "^2.6.0"
+    "unzip2": "^0.2.5"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
