--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "archiver": "^4.0.1",
     "body-parser": "^1.19.0",
     "del": "^5.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.15",
@@ -40,7 +41,6 @@
     "@types/fs-extra": "^8.0.1",
     "@types/q": "^1.5.2",
     "@types/tmp": "^0.1.0",
-    "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
