--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/fs-extra": "^8.0.1",
     "@types/q": "^1.5.2",
     "@types/tmp": "^0.1.0",
+    "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
