--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "archiver": "^4.0.1",
     "body-parser": "^1.19.0",
     "del": "^5.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.15",
