--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.19",
     "multer": "^1.4.2",
+    "password-generator": "^2.3.2",
     "path": "^0.12.7",
     "q": "^1.5.1",
     "rimraf": "^2.7.1",
