--- a/env/development.env
+++ b/env/development.env
@@ -7,3 +7,5 @@ HOST=localhost
 
 JDK8PATH=C:/Program Files/AdoptOpenJDK/jdk-8.0.232.09-hotspot
 ANDROIDTOOLSPATH=C:/AndroidTools
+
+ANALYSISLOGURL=""
