--- a/env/production.env
+++ b/env/production.env
@@ -7,3 +7,5 @@ HOST=https://pwabuilder-cloudapk.azurewebsites.net
 
 JDK8PATH=/usr/lib/jvm/java-8-openjdk-amd64/
 ANDROIDTOOLSPATH=/opt/android-sdk
+
+ANALYSISLOGURL=""
