Better error handling, latest Bubblewrap

--- a/env/development.env
+++ b/env/development.env
@@ -5,7 +5,9 @@ NODE_ENV=development
 PORT=3333
 HOST=localhost
 
+# Requires JDK8. Download at https://adoptopenjdk.net/releases.html?variant=openjdk8&jvmVariant=hotspot. This folder should contain \bin, \demo, \include, \jre, \lib, \sample. 
 JDK8PATH=C:/Program Files/AdoptOpenJDK/jdk-8.0.232.09-hotspot
+# Download the latest at https://androidsdkmanager.azurewebsites.net/Buildtools. This folder should contain \lib, \lib64.
 ANDROIDTOOLSPATH=C:/AndroidTools
 
 ANALYSISLOGURL=""
