--- a/package.json
+++ b/package.json
@@ -19,34 +19,34 @@
   },
   "homepage": "https://github.com/pwa-builder/CloudAPK/",
   "dependencies": {
-    "@bubblewrap/core": "^1.18.0",
-    "archiver": "^4.0.1",
-    "body-parser": "^1.19.0",
-    "del": "^5.1.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "fs-extra": "^7.0.1",
+    "@bubblewrap/core": "^1.19.1",
+    "archiver": "^5.3.1",
+    "body-parser": "^1.20.2",
+    "del": "^6.1.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
     "lodash": "^4.17.21",
-    "multer": "^1.4.2",
-    "node-fetch": "^2.6.1",
+    "multer": "1.4.5-lts.1",
+    "node-fetch": "^2.6.9",
     "password-generator": "^2.3.2",
     "path": "^0.12.7",
     "q": "^1.5.1",
-    "rimraf": "^2.7.1",
+    "rimraf": "^4.4.0",
     "tmp": "^0.2.1",
     "unzip2": "^0.2.5"
   },
   "devDependencies": {
-    "@types/archiver": "^3.0.0",
-    "@types/express": "^4.17.2",
-    "@types/express-fileupload": "^1.1.3",
-    "@types/fs-extra": "^8.0.1",
-    "@types/q": "^1.5.2",
-    "@types/tmp": "^0.1.0",
-    "concurrently": "^5.1.0",
+    "@types/archiver": "^5.3.2",
+    "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
+    "@types/fs-extra": "^11.0.1",
+    "@types/q": "^1.5.5",
+    "@types/tmp": "^0.2.3",
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
-    "ts-node": "^8.6.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.6"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   }
 }
