--- a/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
+++ b/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
@@ -18,6 +18,13 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+      
+    - name: Replace tokens
+      uses: cschleiden/replace-tokens@v1.1
+      with:
+        files: '["**/env/production.env","**/env/preview.env"]'
+      env: 
+       APPLICATIONINSIGHTSCONNECTIONSTRING : ${{secrets.APPLICATIONINSIGHTSCONNECTIONSTRING}}
 
     - name: Log in to registry
       uses: docker/login-action@v1
