Added app insights

--- a/env/development.env
+++ b/env/development.env
@@ -11,3 +11,4 @@ JDK8PATH=C:/Program Files/AdoptOpenJDK/jdk-8.0.232.09-hotspot
 ANDROIDTOOLSPATH=C:/AndroidTools
 
 ANALYSISLOGURL=""
+APPINSIGHTSCONNECTIONSTRING=""
