--- a/env/production.env
+++ b/env/production.env
@@ -9,3 +9,4 @@ JDK8PATH=/usr/lib/jvm/java-8-openjdk-amd64/
 ANDROIDTOOLSPATH=/opt/android-sdk
 
 ANALYSISLOGURL=""
+APPINSIGHTSCONNECTIONSTRING="#{APPLICATIONINSIGHTSCONNECTIONSTRING}#"
