--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/fs-extra": "^11.0.1",
     "@types/q": "^1.5.5",
     "@types/tmp": "^0.2.3",
+    "applicationinsights": "^2.5.1",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "ts-node": "^10.9.1",
