--- a/.github/workflows/master_pwabuilder-cloudapk.yml
+++ b/.github/workflows/master_pwabuilder-cloudapk.yml
@@ -14,24 +14,31 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Log in to registry
-      uses: docker/login-action@v1
-      with:
-        registry: https://pwabuilder.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_6b60970f88494b55afbbceef47af104a }}
+      - name: Replace tokens
+        uses: cschleiden/replace-tokens@v1.1
+        with:
+          files: '["**/env/production.env","**/env/preview.env"]'
+        env:
+          APPLICATIONINSIGHTSCONNECTIONSTRING: ${{secrets.APPLICATIONINSIGHTSCONNECTIONSTRING}}
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}/pwabuildercloudapk-prod:${{ github.sha }}
-        file: ./Dockerfile
+      - name: Log in to registry
+        uses: docker/login-action@v1
+        with:
+          registry: https://pwabuilder.azurecr.io/
+          username: ${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}
+          password: ${{ secrets.AzureAppService_ContainerPassword_6b60970f88494b55afbbceef47af104a }}
+
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}/pwabuildercloudapk-prod:${{ github.sha }}
+          file: ./Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,11 +48,11 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'pwabuilder-cloudapk'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_203f107a9283469089377b5355bde9ec }}
-        images: 'pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}/pwabuildercloudapk-prod:${{ github.sha }}'
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'pwabuilder-cloudapk'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_203f107a9283469089377b5355bde9ec }}
+          images: 'pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}/pwabuildercloudapk-prod:${{ github.sha }}'
