--- a/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
+++ b/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'test'
+      name: 'pre'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -53,6 +53,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'pwabuilder-cloudapk'
-        slot-name: 'test'
+        slot-name: 'pre'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_b001949347dc4621a625655266f9bf51 }}
         images: 'pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-dev:preview'
