--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "unzip2": "^0.2.5"
   },
   "devDependencies": {
+    "@resvg/resvg-js": "^2.4.1",
     "@types/archiver": "^3.0.0",
     "@types/express": "^4.17.2",
     "@types/express-fileupload": "^1.1.3",
