replacing token directly in ts file

--- a/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
+++ b/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
@@ -22,7 +22,7 @@ jobs:
     - name: Replace tokens
       uses: cschleiden/replace-tokens@v1.1
       with:
-        files: '["**/env/production.env","**/env/preview.env"]'
+        files: '["**/analytics.ts"]'
       env: 
        APPLICATIONINSIGHTSCONNECTIONSTRING : ${{secrets.APPLICATIONINSIGHTSCONNECTIONSTRING}}
 
