--- a/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
+++ b/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
@@ -45,6 +45,13 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
+          creds: |
+              {
+                "clientId": "${{ secrets.AZURE_APP_ID }}",
+                "clientSecret":  "${{ secrets.AZURE_PASSWORD }}",
+                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+                "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+              }
           app-name: 'pwabuilder-cloudapk'
           slot-name: 'pre'
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_b001949347dc4621a625655266f9bf51 }}
