--- a/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
+++ b/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
@@ -19,6 +19,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Login with Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: |
+              {
+                "clientId": "${{ secrets.AZURE_APP_ID }}",
+                "clientSecret":  "${{ secrets.AZURE_PASSWORD }}",
+                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+                "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+              }
+
       - name: Log in to registry
         uses: docker/login-action@v2
         with:
