--- a/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
+++ b/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
@@ -39,10 +39,22 @@ jobs:
 
       - name: Build and push container image to registry
         uses: docker/build-push-action@v4
+        
         with:
           push: true
           tags: pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-dev:preview
           file: ./Dockerfile
+          
+      - uses: azure/login@v1
+        with:
+          creds: |
+              {
+                "clientId": "${{ secrets.AZURE_APP_ID }}",
+                "clientSecret":  "${{ secrets.AZURE_PASSWORD }}",
+                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+                "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+              }
+
 
   deploy:
     runs-on: ubuntu-latest
