--- a/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
+++ b/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
@@ -71,4 +71,15 @@ jobs:
           app-name: 'pwabuilder-cloudapk'
           slot-name: 'pre'
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_b001949347dc4621a625655266f9bf51 }}
-          images: 'pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-dev:preview'
+          images: 'pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-dev:preview
+      - uses: azure/login@v1
+        with:
+          creds: |
+              {
+                "clientId": "${{ secrets.AZURE_APP_ID }}",
+                "clientSecret":  "${{ secrets.AZURE_PASSWORD }}",
+                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+                "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+              }
+        
+        
