--- a/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
+++ b/.github/workflows/dev_pwabuilder-cloudapk(pre).yml
@@ -29,21 +29,16 @@ jobs:
                 "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
                 "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
               }
-
-      - name: Log in to registry
-        uses: docker/login-action@v2
+              
+      - uses: azure/docker-login@v1
         with:
-          registry: https://pwabuilder.azurecr.io/
+          login-server: contoso.azurecr.io
           username: ${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}
           password: ${{ secrets.AzureAppService_ContainerPassword_4fbee4d970264b12bb65c9bad20ba87f }}
 
-      - name: Build and push container image to registry
-        uses: docker/build-push-action@v4
-        
-        with:
-          push: true
-          tags: pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-dev:preview
-          file: ./Dockerfile
+      - run: |
+          docker build . -t pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-dev:preview
+          docker push pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-dev:preview
           
       - uses: azure/login@v1
         with:
@@ -70,16 +65,7 @@ jobs:
         with:
           app-name: 'pwabuilder-cloudapk'
           slot-name: 'pre'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_b001949347dc4621a625655266f9bf51 }}
           images: 'pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-dev:preview
-      - uses: azure/login@v1
-        with:
-          creds: |
-              {
-                "clientId": "${{ secrets.AZURE_APP_ID }}",
-                "clientSecret":  "${{ secrets.AZURE_PASSWORD }}",
-                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-                "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
-              }
+
         
         
