--- a/.github/workflows/master_pwabuilder-cloudapk.yml
+++ b/.github/workflows/master_pwabuilder-cloudapk.yml
@@ -14,24 +14,32 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
+        
+      - name: Login with Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: |
+            {
+              "clientId": "${{ secrets.AZURE_APP_ID }}",
+              "clientSecret":  "${{ secrets.AZURE_PASSWORD }}",
+              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+            }
 
       - name: Log in to registry
-        uses: docker/login-action@v1
+        uses: azure/docker-login@v1
         with:
           registry: https://pwabuilder.azurecr.io/
           username: ${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}
           password: ${{ secrets.AzureAppService_ContainerPassword_6b60970f88494b55afbbceef47af104a }}
-
-      - name: Build and push container image to registry
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}/pwabuildercloudapk-prod:staging
-          file: ./Dockerfile
+          
+      - run: |
+          docker build . -t pwabuilder.azurecr.io/${{secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19}}/cloudapk-dev:staging
+          docker push pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}/cloudapk-dev:staging
 
   deploy:
     runs-on: ubuntu-latest
@@ -39,13 +47,22 @@ jobs:
     environment:
       name: 'staging'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+    
     steps:
+      - name: Login with Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: |
+            {
+              "clientId": "${{ secrets.AZURE_APP_ID }}",
+              "clientSecret":  "${{ secrets.AZURE_PASSWORD }}",
+              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+              
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'pwabuilder-cloudapk'
           slot-name: 'staging'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_STAGING }}
           images: 'pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b9de96342f904734ace234555a9c3e19 }}/pwabuildercloudapk-prod:staging'
