--- a/.github/workflows/master_pwabuilder-cloudapk.yml
+++ b/.github/workflows/master_pwabuilder-cloudapk.yml
@@ -34,12 +34,12 @@ jobs:
         uses: azure/docker-login@v1
         with:
           registry: https://pwabuilder.azurecr.io/
-          username: ${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}
-          password: ${{ secrets.AzureAppService_ContainerPassword_4fbee4d970264b12bb65c9bad20ba87f }}
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_PASS }}
           
       - run: |
-          docker build . -t pwabuilder.azurecr.io/${{secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6}}/cloudapk-prod:staging
-          docker push pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-prod:staging
+          docker build . -t pwabuilder.azurecr.io/${{ secrets.REGISTRY_USER }}/cloudapk-prod:staging
+          docker push pwabuilder.azurecr.io/${{ secrets.REGISTRY_USER }}/cloudapk-prod:staging
 
   deploy:
     runs-on: ubuntu-latest
@@ -65,4 +65,4 @@ jobs:
         with:
           app-name: 'pwabuilder-cloudapk'
           slot-name: 'staging'
-          images: 'pwabuilder.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_c4f6902b5ee546e8847acb25a00561b6 }}/cloudapk-prod:staging'
+          images: 'pwabuilder.azurecr.io/${{ secrets.REGISTRY_USER }}/cloudapk-prod:staging'
