--- a/.github/workflows/master_pwabuilder-cloudapk.yml
+++ b/.github/workflows/master_pwabuilder-cloudapk.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -45,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'staging'
+      name: staging
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
@@ -58,11 +58,11 @@ jobs:
               "clientSecret":  "${{ secrets.AZURE_PASSWORD }}",
               "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
               "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
-              
+            } 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'pwabuilder-cloudapk'
-          slot-name: 'staging'
-          images: 'pwabuilder.azurecr.io/${{ secrets.REGISTRY_USER }}/cloudapk-prod:staging'
+          app-name: pwabuilder-cloudapk
+          slot-name: staging
+          images: pwabuilder.azurecr.io/${{ secrets.REGISTRY_USER }}/cloudapk-prod:staging
