added referrer field to cloud apk

--- a/env/test.env
+++ b/env/test.env
@@ -1,9 +1,9 @@
 # Environment
-NODE_ENV=testing
+NODE_ENV=test
 
 # Server
-PORT=4000
-HOST=localost
+PORT=80
+HOST=localhost
 
 JDK8PATH=/usr/lib/jvm/java-8-openjdk-amd64/
 ANDROIDTOOLSPATH=/opt/android-sdk
